# RTXCR

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  License.txt  README.md  build.bat  clean.bat  generateSolution.bat  run.bat
docs/: RtxcrHairGuide.md  RtxcrLssPerf.md  RtxcrSssGuide.md  RtxcrUserGuide.md
samples/pathtracer/: CMakeLists.txt
samples/pathtracer/shaders/: CMakeLists.txt  GBufferBindings.hlsli  GBufferPass.rgs.hlsl  PathtracingPass.chs.hlsl  PathtracingPass.miss.hlsl  PathtracingPass.rgs.hlsl  bindings.hlsli  bsdf.hlsli  debug.hlsli  denoiser.hlsl  geometry.hlsli  hair.hlsli  lighting.hlsli  material.hlsli  morphTargetAnimation.cs.hlsl  payloads.h  ray.hlsli  sampling.hlsli  shaders.cfg  subsurface.hlsli  subsurfaceMaterial.hlsli  tonemapping.hlsl  utils.hlsli
samples/pathtracer/shared/: globalCb.h  lightingCb.h  shared.h
samples/pathtracer/src/: AccelerationStructure.cpp  AccelerationStructure.h  ResourceManager.cpp  ResourceManager.h  SampleRenderer.cpp  SampleRenderer.h  SampleScene.cpp  SampleScene.h  ScopeMarker.h  main.cpp
samples/pathtracer/src/Curve/: CurveTessellation.cpp  CurveTessellation.h
samples/pathtracer/src/Denoiser/DlssRR/: sl_wrapper.cpp  sl_wrapper.h
samples/pathtracer/src/Denoiser/DlssRR/DeviceManagerOverride/: DeviceManagerOverride.h  DeviceManagerOverride_DX12.cpp
samples/pathtracer/src/Denoiser/NRD/: NRDIntegration.cpp  NrdConfig.cpp  NrdConfig.h  NrdDenoiser.cpp  NrdDenoiser.h  NrdIntegration.h
samples/pathtracer/src/RenderPass/: GBufferPass.cpp  GBufferPass.h  MorphTargetAnimationPass.cpp  MorphTargetAnimationPass.h  PathTracingPass.cpp  PathTracingPass.h  PostProcessingPass.cpp  PostProcessingPass.h
samples/pathtracer/src/Ui/: PathtracerUi.cpp  PathtracerUi.h
